# Kindle-Forge-App

./: .gitignore  Kindle Forge.command  README.md
backend/: pyproject.toml  run.py
backend/src/kindle_forge/: __init__.py  cli.py  converter.py  covers.py  images.py  metadata.py  profiles.py  server.py  sources.py  util.py  writers.py
backend/tests/: test_converter.py  test_images.py  test_profiles.py  test_server.py  test_writers.py
frontend/: app.js  index.html  styles.css
